@@ -19,6 +19,7 @@ import org.jetbrains.annotations.Nullable;
 import java.util.ArrayList;
 import java.util.Set;
 
+import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
 public final class FogPresetV2ToV3Converter implements Converter<FogPreset, FogPreset> {
@@ -31,7 +32,7 @@ public final class FogPresetV2ToV3Converter implements Converter<FogPreset, FogP
                 .bindings(
                         fogPresetV2.getBindings().stream()
                                 .map(binding -> Binding.builder()
-                                        .condition(toRootConditionV3(binding, binding.condition()))
+                                        .condition(toRootConditionV3(binding, binding.getCondition()))
                                         .startDistance(binding.startDistance())
                                         .endDistance(binding.endDistance())
                                         .opacity(binding.opacity())
@@ -39,16 +40,16 @@ public final class FogPresetV2ToV3Converter implements Converter<FogPreset, FogP
                                         .brightness(
                                                 binding.brightness() != null
                                                         ? Brightness.builder()
-                                                        .mode(BrightnessMode.valueOf(binding.brightness().mode().name()))
-                                                        .fixedBrightness(binding.brightness().fixedBrightness())
-                                                        .adjustment(binding.brightness().adjustment())
+                                                        .mode(BrightnessMode.valueOf(binding.brightness().getMode().name()))
+                                                        .fixedBrightness(binding.brightness().getFixedBrightness())
+                                                        .adjustment(binding.brightness().getAdjustment())
                                                         .build()
                                                         : null
                                         ).color(
                                                 binding.color() != null
                                                         ? Color.builder()
-                                                        .mode(ColorMode.valueOf(binding.color().mode().name()))
-                                                        .fixedHex(binding.color().fixedHex())
+                                                        .mode(ColorMode.valueOf(binding.color().getMode().name()))
+                                                        .fixedHex(binding.color().getFixedHex())
                                                         .build()
                                                         : null
                                         ).shape(binding.shape())
@@ -60,17 +61,17 @@ public final class FogPresetV2ToV3Converter implements Converter<FogPreset, FogP
     @NotNull
     private Condition toRootConditionV3(@NotNull FogPresetV2.Binding binding, @NotNull FogPresetV2.Binding.Condition condition) {
         val andForRoot = new ArrayList<Condition>();
-        if (binding.skyLightStartLevel() != null) {
+        if (binding.getSkyLightStartLevel() != null) {
             andForRoot.add(
                     Condition.builder()
-                            .skyLightLevel(SkyLightLevel.builder().min(binding.skyLightStartLevel()).build())
+                            .skyLightLevel(SkyLightLevel.builder().min(binding.getSkyLightStartLevel()).build())
                             .build()
             );
         }
-        if (binding.surfaceHeightEnd() != null) {
+        if (binding.getSurfaceHeightEnd() != null) {
             andForRoot.add(
                     Condition.builder()
-                            .surfaceHeight(SurfaceHeight.builder().max(binding.surfaceHeightEnd()).build())
+                            .surfaceHeight(SurfaceHeight.builder().max(binding.getSurfaceHeightEnd()).build())
                             .build());
         }
         if (!andForRoot.isEmpty()) {
@@ -83,20 +84,20 @@ public final class FogPresetV2ToV3Converter implements Converter<FogPreset, FogP
     @NotNull
     private Condition toConditionV3(@NotNull FogPresetV2.Binding.Condition condition) {
         return Condition.builder()
-                .dimensionIn(condition.dimensionIn())
-                .biomeIdIn(condition.biomeIdIn())
-                .biomeTemperature(toTemperatureV3(condition.biomeTemperature()))
-                .difficultyIn(condition.difficultyIn())
-                .weatherIn(toWeathersV3(condition.weatherIn()))
-                .timeIn(toTimePeriodV3(condition.timeIn()))
-                .and(condition.and() != null ? condition.and().stream().map(this::toConditionV3).toList() : null)
-                .or(condition.or() != null ? condition.or().stream().map(this::toConditionV3).toList() : null)
-                .not(condition.not() != null ? toConditionV3(condition.not()) : null).build();
+                .dimensionIn(condition.getDimensionIn())
+                .biomeIdIn(condition.getBiomeIdIn())
+                .biomeTemperature(toTemperatureV3(condition.getBiomeTemperature()))
+                .difficultyIn(condition.getDifficultyIn())
+                .weatherIn(toWeathersV3(condition.getWeatherIn()))
+                .timeIn(toTimePeriodV3(condition.getTimeIn()))
+                .and(condition.getAnd() != null ? condition.getAnd().stream().map(this::toConditionV3).collect(toList()) : null)
+                .or(condition.getOr() != null ? condition.getOr().stream().map(this::toConditionV3).collect(toList()) : null)
+                .not(condition.getNot() != null ? toConditionV3(condition.getNot()) : null).build();
     }
 
     @Nullable
     private Temperature toTemperatureV3(@Nullable FogPresetV2.Binding.Condition.Temperature temperature) {
-        return temperature != null ? Temperature.builder().min(temperature.min()).max(temperature.max()).build() : null;
+        return temperature != null ? Temperature.builder().min(temperature.getMin()).max(temperature.getMax()).build() : null;
     }
 
     @Nullable
@@ -106,6 +107,6 @@ public final class FogPresetV2ToV3Converter implements Converter<FogPreset, FogP
 
     @Nullable
     private TimePeriod toTimePeriodV3(@Nullable FogPresetV2.Binding.Condition.TimePeriod timePeriod) {
-        return timePeriod != null ? TimePeriod.builder().start(timePeriod.start()).end(timePeriod.end()).build() : null;
+        return timePeriod != null ? TimePeriod.builder().start(timePeriod.getStart()).end(timePeriod.getEnd()).build() : null;
     }
 }
